# SAMEthing

./: .gitattributes  CMakeLists.txt  CMakePresets.json  readme.md
cmake/: test_helpers.cmake  toolchain-unix-llvm.cmake  toolchain-unix.cmake
doc/: Doxyfile
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/public/samething/: compiler.h  debug.h
src/core/: CMakeLists.txt
src/core/benchmarks/: CMakeLists.txt  standard.c
src/core/src/: CMakeLists.txt
src/core/src/private/: core.c
src/core/src/public/core/: core.h  debug.h
src/core/src/public/samething/: core.h
src/core/tests/: CMakeLists.txt  samething_core_attn_sig_gen.cpp  samething_core_ctx_init.cpp  samething_core_data.cpp  samething_core_field_add.cpp  samething_core_gen.cpp  samething_core_samples_gen.cpp  samething_core_silence_gen.cpp  samething_ring_buffer_mask.cpp
src/frontend/: CMakeLists.txt
src/frontend/common/: CMakeLists.txt
src/frontend/common/audio/: CMakeLists.txt
src/frontend/common/audio/src/: CMakeLists.txt
src/frontend/common/audio/src/private/: backend_sdl.c
src/frontend/common/audio/src/public/frontend_audio/: audio.h
src/frontend/common/database/: CMakeLists.txt
src/frontend/common/database/src/: CMakeLists.txt
src/frontend/common/database/src/private/: database.c  ini.c  ini.h
src/frontend/common/database/src/public/frontend_database/: database.h
src/frontend/common/database/src/public/samething/frontend/: database.h
src/frontend/common/wavfile/src/private/: wavfile.c
src/frontend/common/wavfile/src/public/samething/frontend/: wavfile.h
src/frontend/common/wavfile/tests/: CMakeLists.txt
src/frontend/qt/: .clang-tidy  CMakeLists.txt  app.cpp  app.h  main.cpp  model.cpp  model.h
src/frontend/qt/controllers/: location_code_editor.cpp  location_code_editor.h  main_window.cpp  main_window.h
src/frontend/qt/views/: location_code_editor.ui  main_window.ui
src/frontend/qt/widgets/: valid_time_period_spinbox.cpp  valid_time_period_spinbox.h
src/frontend/sdl/: CMakeLists.txt  main.c
toolchains/: readme.md
toolchains/unix/: .gitignore  env_setup.sh  readme.md  toolchain_build.sh
toolchains/unix/cmake/: llvm-stage1.cmake  llvm-stage2.cmake
